@@ -33,7 +33,7 @@ if ($db_num_rows>0){
 	$date = translate_inline("SendDate");
 	$arrow = ($sorting_direction?"arrow_down.png":"arrow_up.png");
 
-	rawoutput("<form action='mail.php?op=process' onsubmit=\"return confirm('Do you really want to delete/move those entries?');\" method='post'><table>");
+	rawoutput("<form action='mail.php?op=process' onsubmit=\"return confirm('Do you really want to delete/move/process those entries?');\" method='post'><table>");
 	rawoutput("<tr class='trhead'><td></td>");
 	rawoutput("<td>".($sortorder=='subject'?"<img src='images/shapes/$arrow' alt='$arrow'":"")."<a href='mail.php?sortorder=subject&direction=".($sortorder=='subject'?$newdirection:$sorting_direction)."'>$subject</a></td>");
 	rawoutput("<td>".($sortorder=='name'?"<img src='images/shapes/$arrow' alt='$arrow'":"")."<a href='mail.php?sortorder=name&direction=".($sortorder=='name'?$newdirection:$sorting_direction)."'>$from</a></td>");
