@@ -4,6 +4,7 @@ Changes to 1.2.9 +nb
 *lib/clan/clan_default.php -> GROUP BY condition again (see mysql 8 issues) does not accept an order anymore (rightfully)
 [CHANGES]
 *lib/commentary.php --> GMs can now delete their own comments
+*home.php --> new hook for bottom display "index_bottom"
 
 Changes to 1.2.8 +nb
 [FIXES]
